--- a/config.yml
+++ b/config.yml
@@ -37,86 +37,86 @@ glyphs:
 
   - css: search
     code: 0x1f50d
-    uuid: id8wp0cygl9trzbhlbd9o0fygiesi629
+    uid: id8wp0cygl9trzbhlbd9o0fygiesi629
     from: 0x0073
     search: [search, find]
 
   - css: mail
     code: 0x2709
-    uuid: ae3so8q0b0n2h8esv9flua2nmwswa8fd
+    uid: ae3so8q0b0n2h8esv9flua2nmwswa8fd
     from: 0x006d
     search: [mail, email]
 
   - css: heart
     code: 0x2665
-    uuid: pt5lb2orj9ms0n4yyxjavefdukcv1scl
+    uid: pt5lb2orj9ms0n4yyxjavefdukcv1scl
     from: 0x006a
     search: [heart]
 
   - css: star
     code: 0x2605
-    uuid: kfzodo12ciruwganzy6h1bee2bpyz24d
+    uid: kfzodo12ciruwganzy6h1bee2bpyz24d
     from: 0x002a
     search: [star]
 
   - css: user
     code: 0x1f464
-    uuid: ma9pq3m9ye6f33psotqr8e68yyv7fbz6
+    uid: ma9pq3m9ye6f33psotqr8e68yyv7fbz6
     from: 0x0066
     search: [profile, contact, user]
 
   - css: user-woman
     code: 0x1f469
-    uuid: 99qmwsnyl7d1848xayggtcwaysc4e415
+    uid: 99qmwsnyl7d1848xayggtcwaysc4e415
     from: 0x006b
     search: [profile, contact, user]
 
   - css: user-pair
     code: 0x1f46b
-    uuid: d1a7ajpi3149rk5q4861jw9f2lzg27d1
+    uid: d1a7ajpi3149rk5q4861jw9f2lzg27d1
     from: 0x0067
     search:
 
   - css: video
     code: 0x1f3ac
-    uuid: 3f0r3y17tle74mzaafsx8frnp2nu36gg
+    uid: 3f0r3y17tle74mzaafsx8frnp2nu36gg
     from: 0x0050
     search: [movie, video, film]
 
   - css: video-alt
     code: 0x1f3a6
-    uuid: o3ks7v0pzabyrzijuzxmzyzae06it2eh
+    uid: o3ks7v0pzabyrzijuzxmzyzae06it2eh
     from: 0x005f
     search: [movie, video, film]
 
   - css: videocam
     code: 0x1f3a5
-    uuid: ny7ydbn558y0aij4evvc199yt345tks4
+    uid: ny7ydbn558y0aij4evvc199yt345tks4
     from: 0x0068
     search: [facetime, movie, video, film]
 
   - css: videocam-alt
     code: 0x1f3f9
-    uuid: vsvgkgr7wqknxe7rsjrusvvs43yekcyr
+    uid: vsvgkgr7wqknxe7rsjrusvvs43yekcyr
     from: 0x0048
     search: [movie, video, film]
 
   - css: camera
     code: 0x1f4f7
-    uuid: 1n2jlgp5brxxzpvvrly6jbfutnk2fpra
+    uid: 1n2jlgp5brxxzpvvrly6jbfutnk2fpra
     from: 0x0041
     search: [camera, photo]
 
 
   - css: th
     code: 0x268f
-    uuid: 3v2lgx3os8ub377alyqm8mn2o7r4zywg
+    uid: 3v2lgx3os8ub377alyqm8mn2o7r4zywg
     from: 0x005c
     search: [image, list, thumbnails]
 
   - css: th-list
     code: 0x2630
-    uuid: cy7vw87w1slwyalc4vd8cdhrb50asud3
+    uid: cy7vw87w1slwyalc4vd8cdhrb50asud3
     from: 0x0034
     search: [list]
 
@@ -124,481 +124,481 @@ glyphs:
 
   - css: ok
     code: 0x2713
-    uuid: in76hg99crrkpcbz2rjnmgbiw74s72y0
+    uid: in76hg99crrkpcbz2rjnmgbiw74s72y0
     from: 0x0025
     search: [ok, yes, check, mark]
 
   - css: cancel
     code: 0x2715
-    uuid: rrhco7mfj6ro9yzhe4a1rbln9flw47re
+    uid: rrhco7mfj6ro9yzhe4a1rbln9flw47re
     from: 0x0058
     search: [close, cancel, reject]
 
   - css: cancel-circle
     code: 0x2716
-    uuid: wcb87qh0k9smu6zukdhbn5zip98zofkh
+    uid: wcb87qh0k9smu6zukdhbn5zip98zofkh
     from: 0x0078
     search: [close, cancel, reject]
 
   - css: plus
     code: 0x002b
-    uuid: hbvhbnoivp3qj8xpyqrxa7dvq9ntnci3
+    uid: hbvhbnoivp3qj8xpyqrxa7dvq9ntnci3
     from: 0x002b
     search: [plus]
 
   - css: help-circle
     code: 0xe704
-    uuid: uda7inu4er17zsorrfic7n0l6fvukfqn
+    uid: uda7inu4er17zsorrfic7n0l6fvukfqn
     from: 0x003f
     search: [help, question]
 
   - css: info-circle
     code: 0xe705
-    uuid: 769oa3oy9cfucktpbod5cqmth9ioofxd
+    uid: 769oa3oy9cfucktpbod5cqmth9ioofxd
     from: 0x003d
     search: [info]
 
 
   - css: home
     code: 0x2302
-    uuid: c1d1ix1r5ldq6yl3xwvh3u3fxqale7sy
+    uid: c1d1ix1r5ldq6yl3xwvh3u3fxqale7sy
     from: 0x0070
     search: [home]
 
   - css: lock
     code: 0x1f512
-    uuid: ivdkw88f6me1kxmgrk3qzv6jkgxhbuj7
+    uid: ivdkw88f6me1kxmgrk3qzv6jkgxhbuj7
     from: 0x006e
     search: [lock]
 
   - css: lock-open
     code: 0x1f513
-    uuid: 8u06eo32zy61toyj78of6mi7inn3xlcl
+    uid: 8u06eo32zy61toyj78of6mi7inn3xlcl
     from: 0x0071
     search: [lock, unlock]
 
   - css: eye
     code: 0xe70a
-    uuid: frauy9fser6zk9n5ih3rdpz7zzfjbrvu
+    uid: frauy9fser6zk9n5ih3rdpz7zzfjbrvu
     from: 0x0045
     search: [eye, subscribe]
 
   - css: tag
     code: 0xe70c
-    uuid: 9vefjlcta42r6tjjmog0mpx7mf63jgag
+    uid: 9vefjlcta42r6tjjmog0mpx7mf63jgag
     from: 0x004a
     search: [tag, category, price, offer]
 
   - css: thumbs-up
     code: 0x1f44d
-    uuid: jwebw8rhtovm6adljbdixtj9ltdrzkvb
+    uid: jwebw8rhtovm6adljbdixtj9ltdrzkvb
     from: 0x006c
     search: [thumbs, up, like, vote]
 
   - css: thumbs-down
     code: 0x1f44e
-    uuid: h9yii6q602rt4dxjmy9k9wc3jkwzk8d0
+    uid: h9yii6q602rt4dxjmy9k9wc3jkwzk8d0
     from: 0x004c
     search: [thumbs, down, unlike, vote]
 
 
   - css: download
     code: 0x1f4e5
-    uuid: kfk635sf697exf2r3jqx06zz54e1rgx4
+    uid: kfk635sf697exf2r3jqx06zz54e1rgx4
     from: 0x0044
     search: [download]
 
 
   - css: export
     code: 0xe715
-    uuid: fojo3y3ju5f4vge0bepcxl1mgmzgit9k
+    uid: fojo3y3ju5f4vge0bepcxl1mgmzgit9k
     from: 0x006f
     search: [export, share]
 
   - css: pencil
     code: 0x270e
-    uuid: 587bjlxppui6u4japooa2foe58rsvicp
+    uid: 587bjlxppui6u4japooa2foe58rsvicp
     from: 0x0072
     search: [pencil, write, reply, edit]
 
   - css: pencil-alt
     code: 0x2710
-    uuid: 97var6sq7rzo72ktzg1c6ph46u9pftbr
+    uid: 97var6sq7rzo72ktzg1c6ph46u9pftbr
     from: 0x270e
     search: [pencil, write, reply, edit]
 
   - css: edit
     code: 0x270d
-    uuid: 242giivkgr3e6le7b2xqi2pkdruf85mu
+    uid: 242giivkgr3e6le7b2xqi2pkdruf85mu
     from: 0x0056
     search: [pencil, write, reply, edit]
 
   - css: chat
     code: 0xe720
-    uuid: 7idv5s1f3qkgmbwbat6xukumwqxkrook
+    uid: 7idv5s1f3qkgmbwbat6xukumwqxkrook
     from: 0x0062
     search: [chat, talk]
 
   - css: print
     code: 0xe716
-    uuid: 7ssl5z5jrhu13tb13cd3gb4bdfkzbfzw
+    uid: 7ssl5z5jrhu13tb13cd3gb4bdfkzbfzw
     from: 0x0064
     search: [print]
 
 
   - css: bell
     code: 0x1f514
-    uuid: uaps3vfayj05q7h4rvb10m890xvaequb
+    uid: uaps3vfayj05q7h4rvb10m890xvaequb
     from: 0x0039
     search: [alert, bell, jingle]
 
   - css: attention
     code: 0x26a0
-    uuid: f47srtt9pew19q6kg9jniwtzsb8q1rhy
+    uid: f47srtt9pew19q6kg9jniwtzsb8q1rhy
     from: 0x0021
     search: [attention, warning, alert]
 
 
   - css: location
     code: 0xe724
-    uuid: too2rspp5e6z6m0y6lconmv23uw3qlqo
+    uid: too2rspp5e6z6m0y6lconmv23uw3qlqo
     from: 0x002c
     search: [location, mark, marker]
 
 
   - css: trash
     code: 0xe729
-    uuid: z18zsyvbrpsea0f49kd61kkue1ofsafy
+    uid: z18zsyvbrpsea0f49kd61kkue1ofsafy
     from: 0x0049
     search: [trash, delete]
 
   - css: doc
     code: 0x1f4c4
-    uuid: t7uz7sms69yuckjmkp1zqggwr4jkw0o9
+    uid: t7uz7sms69yuckjmkp1zqggwr4jkw0o9
     from: 0x004b
     search: [doc, article]
 
   - css: article
     code: 0xe734
-    uuid: 573lc53801tfc96xt7fubn59tb0o5s4y
+    uid: 573lc53801tfc96xt7fubn59tb0o5s4y
     from: 0x005a
     search: [document, article]
 
   - css: article-alt
     code: 0xe735
-    uuid: pzy4lq1ak4datbxpdfj3ya74vjfhwxg1
+    uid: pzy4lq1ak4datbxpdfj3ya74vjfhwxg1
     from: 0x0061
     search: [document, article]
 
 
   - css: rss
     code: 0xe73a
-    uuid: 33iuue66u2628uv4kz3vnmh8uee8o7rw
+    uid: 33iuue66u2628uv4kz3vnmh8uee8o7rw
     from: 0x005e
     search: [rss]
 
   - css: wrench
     code: 0x1f527
-    uuid: zc0c8s0nyweeeo9i8a3rucu7alwxt56r
+    uid: zc0c8s0nyweeeo9i8a3rucu7alwxt56r
     from: 0x0028
     search: [settings, wrench]
 
   - css: basket
     code: 0xe73d
-    uuid: vqyhv5kmwcj9zxq28dhq5npykr2k39co
+    uid: vqyhv5kmwcj9zxq28dhq5npykr2k39co
     from: 0x0069
     search: [basket, shopping, cart]
 
   - css: basket-alt
     code: 0xe7ae
-    uuid: s51at1xi1fkaomxvp6dqaax5jmyhtn4h
+    uid: s51at1xi1fkaomxvp6dqaax5jmyhtn4h
     from: 0x002e
     search: [basket, shopping, cart]
 
 
   - css: calendar
     code: 0x1f4c5
-    uuid: 3v94fy782j1ddju9fbafpqa1x0li3bt6
+    uid: 3v94fy782j1ddju9fbafpqa1x0li3bt6
     from: 0x0063
     search: [calendar, date]
 
   - css: calendar-alt
     code: 0xe73e
-    uuid: sz7wtylc6qrwcbsj8aowal9y22hu6lka
+    uid: sz7wtylc6qrwcbsj8aowal9y22hu6lka
     from: 0x0035
     search: [calendar, date]
 
 
   - css: volume-off
     code: 0x1f507
-    uuid: 8pcqxtjxtvkqo3dgemy49z7fw1d8xsh9
+    uid: 8pcqxtjxtvkqo3dgemy49z7fw1d8xsh9
     from: 0x0030
     search: [volume, sound, mute]
 
   - css: volume-down
     code: 0x1f509
-    uuid: ivjrs8ijaooc3a2dw4790kb2rx4l6kjh
+    uid: ivjrs8ijaooc3a2dw4790kb2rx4l6kjh
     from: 0x0031
     search: [volume, sound]
 
   - css: volume-up
     code: 0x1f50a
-    uuid: rrb2e7qiu68cw7itzq0wzm2hugw1u4lu
+    uid: rrb2e7qiu68cw7itzq0wzm2hugw1u4lu
     from: 0x0032
     search: [volume, sound]
 
   - css: bullhorn
     code: 0x1f4e3
-    uuid: uetwmlvm6z9eaot1t74vvsgrte9vwi0n
+    uid: uetwmlvm6z9eaot1t74vvsgrte9vwi0n
     from: 0x0059
     search: [bullhorn, loudspeaker]
 
 
   - css: clock
     code: 0x1f554
-    uuid: 0ohst63cgq1mf1syayvfl8mphms8dbes
+    uid: 0ohst63cgq1mf1syayvfl8mphms8dbes
     from: 0x007b
     search: [clock, time]
 
   - css: clock-alt
     code: 0x1f553
-    uuid: 9avusbdkm7q4vcmevr0x88zxewys65wr
+    uid: 9avusbdkm7q4vcmevr0x88zxewys65wr
     from: 0x007d
     search: [clock, time]
 
 
   - css: stop
     code: 0xe7b3
-    uuid: ip65j4to6y8pionwfd8h22mbl6kp1xya
+    uid: ip65j4to6y8pionwfd8h22mbl6kp1xya
     from: 0x0027
     search: [stop, block, cancel]
 
 
   - css: resize-full
     code: 0xe744
-    uuid: dsfybb9l0x5fyd7e3o5kyisqppifztfu
+    uid: dsfybb9l0x5fyd7e3o5kyisqppifztfu
     from: 0x0076
     search: [resize, fullscreen]
 
   - css: resize-small
     code: 0xe746
-    uuid: qdhvqjd167ee2byleebhw58j4omhb8pl
+    uid: qdhvqjd167ee2byleebhw58j4omhb8pl
     from: 0x0075
     search: [resize]
 
   - css: zoom-in
     code: 0xe750
-    uuid: yc4vm9xepijcjyfdp6mgkvju8engb212
+    uid: yc4vm9xepijcjyfdp6mgkvju8engb212
     from: 0x0079
     search: [zoom. scale, in]
 
   - css: zoom-out
     code: 0xe751
-    uuid: itjusjx5w85jr0udgi40mz7x2kmj1360
+    uid: itjusjx5w85jr0udgi40mz7x2kmj1360
     from: 0x007a
     search: [zoom. scale, out]
 
 
   - css: popup
     code: 0xe74c
-    uuid: b2i5x0ka1m6pskm3puj9jppl672knd5c
+    uid: b2i5x0ka1m6pskm3puj9jppl672knd5c
     from: 0x0057
     search: [popup, window]
 
 
   - css: down-dir
     code: 0x25be
-    uuid: 8ax1xqcbzz1hobyd4i7f0unwib1bztip
+    uid: 8ax1xqcbzz1hobyd4i7f0unwib1bztip
     from: 0x002f
     search: [arrow, down]
   - css: left-dir
     code: 0x25c2
-    uuid: am79573ydakwiicuct1odx7f2e9zv8lv
+    uid: am79573ydakwiicuct1odx7f2e9zv8lv
     from: 0x003c
     search: [arrow, left]
   - css: right-dir
     code: 0x25b8
-    uuid: gypcofts1tkouwkxbv8d33eanqpreyy9
+    uid: gypcofts1tkouwkxbv8d33eanqpreyy9
     from: 0x003e
     search: [arrow, right]
   - css: glyph78
     code: 0x25b4
-    uuid: 6ipws8y9gej6vbloufvhi5qux7rluf64
+    uid: 6ipws8y9gej6vbloufvhi5qux7rluf64
     from: 0x002d
     search: [arrow, up]
 
 
   - css: down
     code: 0x2193
-    uuid: 3iwbntpxmp0kvbvzaxrh8h30xw1l6zvn
+    uid: 3iwbntpxmp0kvbvzaxrh8h30xw1l6zvn
     from: 0x005b
     search: [arrow, down]
   - css: up
     code: 0x2191
-    uuid: giaskl13npzvuuz2ovy3vw8s0bewik08
+    uid: giaskl13npzvuuz2ovy3vw8s0bewik08
     from: 0x005d
     search: [arrow, up]
 
 
   - css: cw
     code: 0x27f3
-    uuid: v4mhug5rzlh2qzlo09kfx03e6e2alqql
+    uid: v4mhug5rzlh2qzlo09kfx03e6e2alqql
     from: 0x0052
     search: [reload, redo, repeat]
 
 
   - css: signal
     code: 0xe770
-    uuid: e6t4yvmv401e9gpo2anslq4uqy2iz692
+    uid: e6t4yvmv401e9gpo2anslq4uqy2iz692
     from: 0x0060
     search: [broadcast, wifi, signal]
 
   - css: award
     code: 0x1f3c9
-    uuid: lnyme20kl7kh26it9yrqk7at10k6i0sf
+    uid: lnyme20kl7kh26it9yrqk7at10k6i0sf
     from: 0x0029
     search: [top, trophy, prize, award]
 
 
   - css: mobile
     code: 0x1f4f1
-    uuid: m3m8301t2xdy30x4lp7txm0vztl67tcl
+    uid: m3m8301t2xdy30x4lp7txm0vztl67tcl
     from: 0x004f
     search: [mobile, iphone]
 
   - css: mobile-alt
     code: 0xe7b0
-    uuid: raxalm7kdj5at9v49bevw6r2cw7fdv9r
+    uid: raxalm7kdj5at9v49bevw6r2cw7fdv9r
     from: 0x004e
     search: [mobile, iphone]
 
   - css: tablet
     code: 0xe7b1
-    uuid: r36ey62e6pi493s139u528739kjr3o8w
+    uid: r36ey62e6pi493s139u528739kjr3o8w
     from: 0x0051
     search: [tablet]
 
   - css: ipod
     code: 0xe7b2
-    uuid: hx5rpl1lxy10jqibjq0jmu0dhruapso4
+    uid: hx5rpl1lxy10jqibjq0jmu0dhruapso4
     from: 0x004d
     search: [player, ipod]
 
 
   - css: cd
     code: 0x1f4bf
-    uuid: 80fm9zvbe9habbzvsy6w4aymkgz2vu9i
+    uid: 80fm9zvbe9habbzvsy6w4aymkgz2vu9i
     from: 0x0043
     search: [cd, vinyl]
 
 
   - css: grid
     code: 0xe7b4
-    uuid: o1c30odwfvgcvi5b4jsg95sur8v6ghsp
+    uid: o1c30odwfvgcvi5b4jsg95sur8v6ghsp
     from: 0x0033
     search: [grid, table]
 
 
   - css: book
     code: 0x1f4d5
-    uuid: dplw5xo88mzzr7b45nvjcamyyhni6drs
+    uid: dplw5xo88mzzr7b45nvjcamyyhni6drs
     from: 0x0042
     search: [book]
 
 
   - css: easel
     code: 0xe7b5
-    uuid: px45pk7jgwms9zb3zcm44h8al4f3xxkd
+    uid: px45pk7jgwms9zb3zcm44h8al4f3xxkd
     from: 0x0053
     search: [easel, stand]
 
 
   - css: globe
     code: 0x1f310
-    uuid: i6ej1r6t84xouh0dct7g9zyx3ya9s9eg
+    uid: i6ej1r6t84xouh0dct7g9zyx3ya9s9eg
     from: 0x0077
     search: [globe]
 
 
   - css: chart
     code: 0x1f4c8
-    uuid: 97ylvmgyj79w96iwzdanwmf5o4cvo17w
+    uid: 97ylvmgyj79w96iwzdanwmf5o4cvo17w
     from: 0x0036
     search: [chart, pie, diagram]
 
   - css: chart-bar
     code: 0x1f4ca
-    uuid: ogmm8kz4f7y6ji50gzajnwed8h6ck2u7
+    uid: ogmm8kz4f7y6ji50gzajnwed8h6ck2u7
     from: 0x0037
     search: [chart, bar, diagram]
 
   - css: chart-pie
     code: 0xe7a2
-    uuid: crns7fze53tnmwvi0wyfhq8whxfmmroz
+    uid: crns7fze53tnmwvi0wyfhq8whxfmmroz
     from: 0x0038
     search: [chart, pie, diagram]
 
 
   - css: money
     code: 0x1f4b0
-    uuid: qdrxlsrgibi1n48dmygz3rp6ciczkjfs
+    uid: qdrxlsrgibi1n48dmygz3rp6ciczkjfs
     from: 0x0024
     search: [money]
 
   - css: dollar
     code: 0x1f4b5
-    uuid: fhpup8jff2yw9kmuwavhyqxogczcbbhj
+    uid: fhpup8jff2yw9kmuwavhyqxogczcbbhj
     from: 0x0023
     search: [money, dollar]
 
 
   - css: at
     code: 0x0040
-    uuid: mjbsqg8yglgu0esc6ru2vh111jmh7qng
+    uid: mjbsqg8yglgu0esc6ru2vh111jmh7qng
     from: 0x0040
     search: ["@", "at"]
 
   - css: colon
     code: 0x003a
-    uuid: 2qh229aneb95ds2afi7dbdsxz9jrbhcl
+    uid: 2qh229aneb95ds2afi7dbdsxz9jrbhcl
     from: 0x003a
     search: [colon]
 
   - css: semicolon
     code: 0x003b
-    uuid: snfl88dncpfb384hoi4rv4vqm08h8at8
+    uid: snfl88dncpfb384hoi4rv4vqm08h8at8
     from: 0x003b
     search: [semicolon]
 
 
   - css: facebook
     code: 0xf300
-    uuid: w42gjpwdzqeszptpy1xqp8r77o6gcasj
+    uid: w42gjpwdzqeszptpy1xqp8r77o6gcasj
     from: 0x0046
     search: [facebook]
 
   - css: facebook-rect
     code: 0xf301
-    uuid: 03cmb4p7niofd11yos3fpjjuvvpy7mji
+    uid: 03cmb4p7niofd11yos3fpjjuvvpy7mji
     from: 0x0047
     search: [facebook]
 
   - css: twitter
     code: 0xf302
-    uuid: uor1aru5x0tewrwsl36amx6hogjv61cs
+    uid: uor1aru5x0tewrwsl36amx6hogjv61cs
     from: 0x0054
     search: [twitter]
 
   - css: twitter-bird
     code: 0xf303
-    uuid: h7disbowd4v177zjlsi6anz5nkka08uy
+    uid: h7disbowd4v177zjlsi6anz5nkka08uy
     from: 0x0074
     search:
     search: [twitter]
 
   - css: twitter-rect
     code: 0xf314
-    uuid: gq8m9lqx2hhwxf7rz30adbr37rthzirq
+    uid: gq8m9lqx2hhwxf7rz30adbr37rthzirq
     from: 0x0055
     search: [twitter]
 
